--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "morgan": "^1.9.1",
+    "natives": "^1.1.6",
+    "node-fetch": "^2.6.0",
+    "opn": "^6.0.0",
     "pug": "^2.0.0-beta6",
+    "readline": "^1.3.0",
+    "request": "^2.88.2",
     "serve-favicon": "^2.3.0",
-    "natives": "^1.1.6"
+    "tweetnacl": "^1.0.3",
+    "tweetsodium": "0.0.5",
+    "util": "^0.12.3"
   },
   "engines": {
     "node": ">6.0.0"
