--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "https-localhost": "^4.5.3",
     "morgan": "^1.9.1",
     "natives": "^1.1.6",
     "node-fetch": "^2.6.0",
