--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "applicationinsights": "^1.0.0",
+    "azure-graph": "^4.3.0",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "https-localhost": "^4.5.3",
     "morgan": "^1.9.1",
+    "ms-rest-azure": "^3.0.0",
     "natives": "^1.1.6",
     "node-fetch": "^2.6.0",
     "opn": "^6.0.0",
