--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,42 +1,50 @@
-# This workflow will build and push a node.js application to an Azure Web App on every push to the master branch.
-#
-# To configure this workflow:
-# 1. Set up a secret in your repository named AZURE_WEBAPP_PUBLISH_PROFILE with the value of your Azure publish profile.
-# 2. Change the value for AZURE_WEBAPP_NAME, AZURE_WEBAPP_PACKAGE_PATH and NODE_VERSION set as environment variables  (below).
-#
-# For more information on GitHub Actions for Azure, refer to https://github.com/Azure/Actions
-# For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
+# Node.js with webpack on Linux Web App
+# Build a Node.js project using the webpack CLI and deploy it to Azure as a Linux web app.
+# Add steps that analyze code, save build artifacts, deploy, and more:
 
 on:
   push:
     branches:
-      - master
+      - {{{ sourceRepository.branch }}}
 
-env:
-  AZURE_WEBAPP_NAME: nodeappgh   # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '10.x'                # set this to the node version to use
+name: Build and deploy Node app
 
 jobs:
   build-and-deploy:
-    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
+    # checkout the repo
     - uses: actions/checkout@master
-    - name: Use Node.js ${{ env.NODE_VERSION }}
-      uses: actions/setup-node@v1
+
+    # login using publishing credentials
+    - uses: azure/login@v1
       with:
-        node-version: ${{ env.NODE_VERSION }}
-    - name: npm install, build, and test
+        creds: {{=<% %>=}}${{ secrets.<% targetResource.serviceConnectionId %> }}<%={{ }}=%>
+
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '10.x'
+
+    # install dependencies, build, and test
+    - name: npm install, build
+      working-directory: {{{ workingDirectory }}}
       run: |
-        # Build and test the project, then
-        # deploy to Azure Web App.
+        npm install -g webpack webpack-cli --save-dev
         npm install
-        npm run build --if-present
-        npm run test --if-present
-    # - name: 'Deploy to Azure WebApp'
-    #   uses: azure/webapps-deploy@v2
-    #   with: 
-    #     app-name: ${{ env.AZURE_WEBAPP_NAME }}
-    #     publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-    #     package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        npx webpack --config webpack.config.js
+
+    - uses: azure/appservice-settings@v1
+      with:
+        app-name: {{{ targetResource.resource.name }}}
+        general-settings-json: '{"linuxFxVersion": "NODE|10.10"}' #'General configuration settings as Key Value pairs'
+
+    # deploy web app
+    - uses: azure/webapps-deploy@v1
+      with:
+        app-name: {{{ targetResource.resource.name }}}
+        package: {{{ workingDirectory }}}
+
+    # Azure logout
+    - name: logout
+      run: |
+        az logout
