--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ms-rest-azure": "^3.0.0",
     "natives": "^1.1.6",
     "node-fetch": "^2.6.0",
+    "open-in-editor": "^2.2.0",
     "opn": "^6.0.0",
     "pug": "^2.0.0-beta6",
     "readline": "^1.3.0",
