--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "https-localhost": "^4.5.3",
+    "launch-editor": "^2.2.1",
     "morgan": "^1.9.1",
     "ms-rest-azure": "^3.0.0",
     "natives": "^1.1.6",
