--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ms-rest-azure": "^3.0.0",
     "natives": "^1.1.6",
     "node-fetch": "^2.6.0",
+    "open": "^7.0.4",
     "open-in-editor": "^2.2.0",
     "opn": "^6.0.0",
     "pug": "^2.0.0-beta6",
