--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "serve-favicon": "^2.3.0",
     "tweetnacl": "^1.0.3",
     "tweetsodium": "0.0.5",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "uuid": "^8.1.0"
   },
   "engines": {
     "node": ">6.0.0"
