--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "https-localhost": "^4.5.3",
+    "jwt-decode": "^2.2.0",
     "launch-editor": "^2.2.1",
     "morgan": "^1.9.1",
     "ms-rest-azure": "^3.0.0",
