--- a/templates/node/nodejsOnLinux.yml
+++ b/templates/node/nodejsOnLinux.yml
@@ -14,7 +14,7 @@ jobs:
 
     - uses: azure/login@v1
       with:
-        creds: {{=<% %>=}}${{ secrets.<% targetResource.serviceConnectionId %> }}<%={{ }}=%>
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     # install dependencies, build, and test
     - name: npm install, build, and test
