--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "azure-graph": "^4.3.0",
     "body-parser": "^1.15.0",
     "connect-logger": "0.0.1",
+    "console-read-write": "^0.1.1",
     "cookie-parser": "^1.4.0",
     "cookie-session": "^1.4.0",
     "debug": "^2.2.0",
