--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,30 +2,31 @@ on:
   push:
     branches:
       - master
+
+name: Build and deploy Node app
+
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     steps:
     # checkout the repo
-    - name: 'Checkout Github Action' 
-      uses: actions/checkout@master
-    
-    - name: 'Login via Azure CLI'
-      uses: azure/login@v1.1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - uses: actions/checkout@master
 
-    - name: Setup Node 10.x
-      uses: actions/setup-node@v1
+    - uses: actions/setup-node@v1
       with:
         node-version: '10.x'
-    - name: 'npm install, build, and test'
+
+    # install dependencies, build, and test
+    - name: npm install, build, and test
+      working-directory: '.'
       run: |
         npm install
         npm run build --if-present
         npm run test --if-present
-       
-    - name: 'Run Azure webapp deploy action using Service Principal'
-      uses: azure/webapps-deploy@v2
-      with: 
+
+    # deploy web app using publish profile credentials
+    - uses: azure/webapps-deploy@v1
+      with:
         app-name: testnodeappshubham
+        package: '.'
+        publish-profile: ${{ secrets.AZURE_CREDENTIALS }}
