--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.0",
     "cookie-session": "^1.4.0",
     "debug": "^2.2.0",
+    "env-editor": "^0.4.1",
     "express": "^4.14.0",
     "https-localhost": "^4.5.3",
     "jwt-decode": "^2.2.0",
