--- a/templates/node/nodejsOnLinux.yml
+++ b/templates/node/nodejsOnLinux.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - {{{ sourceRepository.branch }}}
+      - master
 
 name: Build and deploy Node app
 
@@ -27,14 +27,14 @@ jobs:
 
     - uses: azure/appservice-settings@v1
       with:
-        app-name: {{{ targetResource.resource.name }}}
+        app-name: testnodeappshubham
         general-settings-json: '{"linuxFxVersion": "NODE|lts"}' #'General configuration settings as Key Value pairs'
 
     # deploy web app using publish profile credentials
     - uses: azure/webapps-deploy@v1
       with:
-        app-name: {{{ targetResource.resource.name }}}
-        package: {{{ workingDirectory }}}
+        app-name: testnodeappshubham
+        package: '.'
 
     # Azure logout
     - name: logout
