--- a/templates/node/nodejsOnWindows.yml
+++ b/templates/node/nodejsOnWindows.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - {{{ sourceRepository.branch }}}
+      - master
 
 name: Build and deploy Node app
 
@@ -18,7 +18,7 @@ jobs:
 
     # install dependencies, build, and test
     - name: npm install, build, and test
-      working-directory: {{{ workingDirectory }}}
+      working-directory: '.'
       run: |
         npm install
         npm run build --if-present
@@ -27,6 +27,6 @@ jobs:
     # deploy web app using publish profile credentials
     - uses: azure/webapps-deploy@v1
       with:
-        app-name: {{{ targetResource.resource.name }}}
-        package: {{{ workingDirectory }}}
-        publish-profile: {{=<% %>=}}${{ secrets.<% targetResource.serviceConnectionId %> }}<%={{ }}=%>
+        app-name: testnodeappshubham
+        package: '.'
+        publish-profile: ${{ secrets.AZURE_CREDENTIALS }}
