--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,29 +7,36 @@ name: Build and deploy Node app
 
 jobs:
   build-and-deploy:
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
     steps:
     # checkout the repo
     - uses: actions/checkout@master
-    
-    - uses: azure/login@v1.1
+
+    - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-        
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '10.x'
 
     # install dependencies, build, and test
     - name: npm install, build, and test
-      working-directory: '.'
+      working-directory: {{{ workingDirectory }}}
       run: |
         npm install
         npm run build --if-present
         npm run test --if-present
+
+
+    - uses: azure/appservice-settings@v1
+      with:
+        app-name: testnodeappshubham
+        general-settings-json: '{"linuxFxVersion": "NODE|lts"}' #'General configuration settings as Key Value pairs'
 
     # deploy web app using publish profile credentials
     - uses: azure/webapps-deploy@v1
       with:
         app-name: testnodeappshubham
         package: '.'
+
+    # Azure logout
+    - name: logout
+      run: |
+        az logout
