--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,7 +18,7 @@ jobs:
 
     # install dependencies, build, and test
     - name: npm install, build, and test
-      working-directory: {{{ workingDirectory }}}
+      working-directory: '.'
       run: |
         npm install
         npm run build --if-present
