--- a/templates/node/nodejsWithAngularOnLinuxWebApp.yml
+++ b/templates/node/nodejsWithAngularOnLinuxWebApp.yml
@@ -5,7 +5,7 @@
 on:
   push:
     branches:
-      - {{{ sourceRepository.branch }}}
+      - master
 
 name: Build and deploy Node app
 
@@ -19,7 +19,7 @@ jobs:
     # login using publishing credentials
     - uses: azure/login@v1
       with:
-        creds: {{=<% %>=}}${{ secrets.<% targetResource.serviceConnectionId %> }}<%={{ }}=%>
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - uses: actions/setup-node@v1
       with:
@@ -27,22 +27,22 @@ jobs:
 
     # install dependencies, build, and test
     - name: npm install, build
-      working-directory: {{{ workingDirectory }}}
+      working-directory: '.'
       run: |
         npm install -g @angular/cli
         npm install
         ng build --prod
 
-    - uses: azure/appservice-settings@v1
-      with:
-        app-name: {{{ targetResource.resource.name }}}
-        general-settings-json: '{"linuxFxVersion": "NODE|10.10"}' #'General configuration settings as Key Value pairs'
+    # - uses: azure/appservice-settings@v1
+    #   with:
+    #     app-name: {{{ targetResource.resource.name }}}
+    #     general-settings-json: '{"linuxFxVersion": "NODE|10.10"}' #'General configuration settings as Key Value pairs'
 
     # deploy web app
     - uses: azure/webapps-deploy@v1
       with:
-        app-name: {{{ targetResource.resource.name }}}
-        package: {{{ workingDirectory }}}
+        app-name: angularappshubham
+        package: '.'
 
     # Azure logout
     - name: logout
