--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,41 +2,30 @@ on:
   push:
     branches:
       - master
-
-name: Build and deploy Node app
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
     # checkout the repo
-    - uses: actions/checkout@master
-
-    - uses: azure/login@v1
+    - name: 'Checkout Github Action' 
+      uses: actions/checkout@master
+    
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1.1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # install dependencies, build, and test
-    - name: npm install, build, and test
-      working-directory: '.'
+    - name: Setup Node 10.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: '10.x'
+    - name: 'npm install, build, and test'
       run: |
         npm install
         npm run build --if-present
         npm run test --if-present
-
-
-    # - uses: azure/appservice-settings@v1
-    #   with:
-    #     app-name: testnodeappshubham
-    #     general-settings-json: '{"linuxFxVersion": "NODE|lts"}' #'General configuration settings as Key Value pairs'
-
-    # deploy web app using publish profile credentials
-    - uses: azure/webapps-deploy@v1
-      with:
+       
+    - name: 'Run Azure webapp deploy action using Service Principal'
+      uses: azure/webapps-deploy@v2
+      with: 
         app-name: testnodeappshubham
-        package: '.'
-
-    # Azure logout
-    - name: logout
-      run: |
-        az logout
