--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "launch-editor": "^2.2.1",
     "morgan": "^1.9.1",
     "ms-rest-azure": "^3.0.0",
+    "mustache": "^4.0.1",
     "natives": "^1.1.6",
     "node-fetch": "^2.6.0",
     "open": "^7.0.4",
