Script for node app added

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cookie-session": "^1.4.0",
     "debug": "^2.2.0",
     "env-editor": "^0.4.1",
-    "express": "^4.14.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "https-localhost": "^4.5.3",
     "jwt-decode": "^2.2.0",
     "launch-editor": "^2.2.1",
