--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-
-/give_inputs.txt
-/loginAzure.js
 # User-specific files
 *.rsuser
 *.suo
@@ -351,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+/open_workflow_run
+/give_inputs.txt
