--- a/.gitignore
+++ b/.gitignore
@@ -349,6 +349,6 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-open_workflow_run
+/open_workflow_run
 /give_inputs.txt
-/OurProject
+OurProject
