--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "tweetnacl": "^1.0.3",
     "tweetsodium": "0.0.5",
     "util": "^0.12.3",
-    "uuid": "^8.1.0",
-    "windows-credman": "^1.0.1"
+    "uuid": "^8.1.0"
   },
   "engines": {
     "node": ">6.0.0"
