Proper end to end

--- a/.gitignore
+++ b/.gitignore
@@ -350,4 +350,9 @@ MigrationBackup/
 .ionide/
 /open_workflow_run
 /give_inputs.txt
+config.yml
+templates/
+/open_workflow_run
+/give_inputs.txt
+config.yml
 templates/
