--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,32 @@
-title: Deploy Node App to Azure
-tagline: Learn how to create an Action workflow to set up CICD for a Node App deployed to Azure
-description: Point users to a newly created issue and closes the original issue
-template:
-  name: node-app
-  repo: node-express
+title: Deploy To Azure Using Git Hooks and GitHub Actions
+Getting Started:
+  - Run the following command in your terminal from the repository you want to deploy => node Ourproject/main.js
+  - Files/Folders created:-
+    - A templates folder:- that will be used for getting the workflow file.
+    - A give_inputs.txt file:- You are required to give the necessary inputs inside this file before starting with deploying your app.
+    - A pre-commit hook:- This is present inside the .git/hooks folder (If you had any pre-exisiting hook with the same name, it gets saved as pre-commit.bkp)
+    - A pre-push hook:- This is present inside the .git/hooks folder (If you had any pre-exisiting hook with the same name, it gets saved as pre-push.bkp)
+    - An open_workflow_run file:- This is a JavaScript file which can be run after you are done with pushing your contents to GitHub. This will take you to the workflow run you triggered on the last push.
+    - Apart from the files created, the .gitignore file is appended with the name of the files/folders so that no sensitive information is pushed to your GitHub account.
+
+How to Deploy?:
+  - First, you need to give the following MANDATORY inputs in the give_inputs.txt:
+
+    - GitHub PAT Token:
+      - Repo scope needed.
+      - Visit (https://github.com/shubham-agarwal-27/hooks-deploy-to-azure/blob/master/README.md#github-pat) to know how to get a GitHub APT Token.
+    
+    - Azure Tenant ID:
+      - Visit (https://github.com/shubham-agarwal-27/hooks-deploy-to-azure/blob/master/README.md#azure-tenant-id) to know how to get your Azure Tenant ID.
+
+    - Subscription ID:
+      - Visit (https://github.com/shubham-agarwal-27/hooks-deploy-to-azure/blob/master/README.md#subscription-id) to know how to get a subscription
+
+  - Next, you have two optional fields:
+
+    - Resource Group:
+      - Visit (https://github.com/shubham-agarwal-27/hooks-deploy-to-azure/blob/master/README.md#resource-group) to know how to get a resource group name
+
+    - Resource:
+      - Visit (https://github.com/shubham-agarwal-27/hooks-deploy-to-azure/blob/master/README.md#resource) to know how to get a resource name
+
