--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "name": "alagrawa"
   },
   "dependencies": {
+    "@shubham-agarwal-27/hooks-deploy-to-azure": "^1.0.1",
     "adal-node": "^0.2.1",
     "applicationinsights": "^1.0.0",
     "azure-graph": "^4.3.0",
