--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "open": "^7.0.4",
     "open-in-editor": "^2.2.0",
     "opn": "^6.0.0",
+    "process": "^0.11.10",
     "pug": "^2.0.0-beta6",
     "readline": "^1.3.0",
     "request": "^2.88.2",
